much improvments. user upload ready. ready for first go live I think

--- a/language/fr.csv
+++ b/language/fr.csv
@@ -50,3 +50,11 @@
 "username needs to be %1 characters or more.","le nom d'utilisateur doit avoir au moins %1 caractères."
 "password needs to be %1 characters or more.","le mot de passe doit avoir au moins %1 caractères."
 "email address is invalid.","adresse courriel invalide"
+"successfully updated video info","vidéo modifié avec succès"
+"error updating video info","erreur lors de la mise à jour du vidéo"
+"unknown validation type ""%1"".","type de validation inconnue ""%1""."
+"page %1 of %2","page %1 de %2"
+"previous","précedente"
+"next","prochaine"
+"suspended","suspendu"
+"error, video not found","vidéo inexistant"
