--- a/language/fr.csv
+++ b/language/fr.csv
@@ -58,3 +58,16 @@
 "next","prochaine"
 "suspended","suspendu"
 "error, video not found","vidéo inexistant"
+"create channel","créer une chaîne"
+"edit channel %1","modifier la chaîne %1"
+"successfully created channel","la nouvelle chaîne a été créée"
+"successfully updated channel","les informations de la chaîne ont été mises à jour"
+"edit","modifier"
+"return to channels list","retourner à la liste des chaînes"
+"create new channel","créer une chaîne"
+"channels","chaînes"
+"are you sure you want to delete channel %1?'","êtes vous certain que vous voulez effacer la chaîne %1?"
+"you cannot delete a channel that is not empty","vous ne pouvez pas effacer une chaîne qui contient des videos"
+"Channel","Chaîne"
+"you need to create at least 1 channel to upload a video. %1click here to create a channel%2","vous devez créer au moins 1 chaîne avant de mettre en ligne un vidéo. %1cliquez ici pour créer une chaîne%2"
+"invalid channel","chaîne invalide"
