ready status and other fixes

--- a/language/fr.csv
+++ b/language/fr.csv
@@ -72,3 +72,7 @@
 "you need to create at least 1 channel to upload a video. %1click here to create a channel%2","vous devez créer au moins 1 chaîne avant de mettre en ligne un vidéo. %1cliquez ici pour créer une chaîne%2"
 "invalid channel","chaîne invalide"
 "Caught exception: ","Une erreur est survenue: "
+"error, unknown video state","erreur, état du vidéo non-identifié"
+"still encoding","en cours d'encodage"
+"encoding failed","l'encodage a échoué"
+"unknown error","erreur inconnue"
