--- a/language/fr.csv
+++ b/language/fr.csv
@@ -78,3 +78,5 @@
 "unknown error","erreur inconnue"
 "Url","Url"
 "ie: https://url.to/video/file.mp4","ex: https://url.du/fichier/video.mp4"
+"embed channel","integrer cette chaîne à une page"
+"use this code to embed this channel","utilisez ce code pour integrer cette chaîne à une page"
