added captcha to registration

--- a/language/fr.csv
+++ b/language/fr.csv
@@ -85,3 +85,5 @@
 "hour","heure"
 "hours","heures"
 "%1 %2 ago","il y a %1 %2"
+"retype this number:","entrez ce nombre:"
+"please retype the number correctly","s’il vous plaît entrez le bon nombre de vérification"
